<resources>
    <string name="app_name">Semenov</string>
    <string name="administrator">Администратор</string>
    <string name="password">Пароль</string>
    <string name="setting">Настройки</string>
    <string name="login">Вход</string>
    <string name="tableNumber">Номер стола</string>
    <string name="tariff">Тарифы</string>
    <string name="employee">Сотрудники</string>
    <string name="share">Архивировать БД</string>
    <string name="admin">Администраторы</string>
    <string name="client">Клиенты</string>
    <string name="sale">скидки</string>
    <string name="tableType">Тип стола</string>
    <string name="table">Cтол</string>
    <string name="status">Статус</string>
    <string name="startTime">Время\nначала</string>
    <string name="duration">длительность</string>
    <string name="statusToExtend">следующий\nрезерв</string>
    <string name="reserve">Резервы</string>
    <string name="back">Назад</string>
</resources>