<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".SettingActivity">

    <Button
        android:id="@+id/btnTariff"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/btn_style_1"
        android:text="@string/tariff"
        android:onClick="onClickToEditDBActivity"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnEmployee"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnTariff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_style_1"
        android:text="@string/employee"
        android:onClick="onClickToEditDBActivity"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btnClient"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnEmployee"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_style_1"
        android:text="@string/client"
        android:onClick="onClickToEditDBActivity"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnClient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:background="@drawable/btn_style_6"
        android:onClick="onClickBacktoMainActivity"
        android:text="@string/back"
        android:textSize="40sp" />





</RelativeLayout>