<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:text="@string/administrator"
        android:textSize="30sp" />

    <AutoCompleteTextView
        android:id="@+id/actvAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAdmin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:gravity="center"
        android:hint="Выберите админа"
        android:textIsSelectable="true"
        android:textSize="20sp">

    </AutoCompleteTextView>

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actvAdmin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etPas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="введите пароль"
        android:inputType="numberPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/etPas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_style_1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="16sp" />

</RelativeLayout>